[package]
name = "hookfreight"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for Hookfreight"
license = "Apache-2.0"
repository = "https://github.com/Hookfreight/hookfreight-rust"
homepage = "https://hookfreight.com"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "time"] }
